--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <meta charset="UTF-8">
   <title>greaterThan.js Gesture Tracking</title>
   <link rel="stylesheet" href="https://unpkg.com/carbon-components@latest/css/carbon-components.css" />
@@ -10,8 +10,8 @@
 </head>
 
 <body class="bx--body p20">
-  <div class="p20">
-  <b>greaterThan.js Gesture Tracking App</b>
+  <div class="p20"></div>
+  GreaterThan.js Gesture Tracking App
   </div>
   <div class="mb10">
     <button  id="trackbutton" class="bx--btn bx--btn--secondary" type="button" disabled>
@@ -20,8 +20,12 @@
     <div id="updatenote" class="updatenote mt10"> loading model ..</div>
   </div>
   <video class="videobox canvasbox" autoplay="autoplay" id="myvideo" hidden></video>
-  <canvas id="canvas" class="border canvasbox"></canvas>
-  <canvas id="canvas2" class="border canvasbox"></canvas>
+  <div class="p20">
+    <canvas id="canvas" class="border canvasbox"></canvas>
+  </div>
+  <div class="p20">
+    <canvas id="canvas2" class="border canvasbox"></canvas>
+  </div>
 
 
   <script src="https://unpkg.com/carbon-components@latest/scripts/carbon-components.js"></script>
