--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 
 <body class="bx--body p20">
-  <div class="p20"></div>
-  GreaterThan.js Gesture Tracking App
-  </div>
   <div class="mb10">
     <button  id="trackbutton" class="bx--btn bx--btn--secondary" type="button" disabled>
       Toggle Video
@@ -21,7 +18,7 @@
   </div>
   <video class="videobox canvasbox" autoplay="autoplay" id="myvideo" hidden></video>
   <div class="p20">
-    <canvas id="canvas" class="border canvasbox"></canvas>
+    <canvas id="canvas" class="border canvasbox" hidden></canvas>
   </div>
   <div class="p20">
     <canvas id="canvas2" class="border canvasbox"></canvas>
